# dip-demo

./: .gitignore  README.md
aws-dynamodb/: BUILD.bazel  README.md  WORKSPACE.bazel
aws-dynamodb/src/main/java/com/windhc/dynamodb/: Main.java
aws-lambda/: BUILD.bazel  README.md  WORKSPACE.bazel
aws-lambda/src/main/java/com/windhc/lambda/: Handler.java
aws-s3/: BUILD.bazel  README.md  WORKSPACE.bazel
aws-s3/src/main/java/com/windhc/s3/: Main.java
grpc/: BUILD.bazel  README.md  WORKSPACE.bazel
grpc/src/main/com/windhc/grpc/: BUILD.bazel
grpc/src/main/java/com/windhc/grpc/: HelloClient.java  HelloServer.java  HelloServiceImpl.java
grpc/src/main/proto/: BUILD.bazel  HelloService.proto
gson/: BUILD.bazel  WORKSPACE
gson/src/main/java/com/windhc/gson/: Book.java  Main.java
guice/: BUILD.bazel  WORKSPACE.bazel
guice/src/main/java/com/windhc/guice/: AnimalModule.java  AnimalService.java  CatServiceImpl.java  Main.java
indico-client/: BUILD.bazel  WORKSPACE.bazel
indico-client/src/main/java/com/windhc/indico/: Main.java
indico-client/src/main/resources/: config.properties
pdf-to-image/: BUILD.bazel  WORKSPACE.bazel
pdf-to-image/src/main/java/com/windhc/pdf/: Main.java
thrift/: AnimalService.thrift  BUILD.bazel  README.md  WORKSPACE.bazel
thrift/src/main/java/com/windhc/thrift/: CatServiceImpl.java  Client.java  Server.java
