load("@rules_java//java:defs.bzl", "java_binary", "java_library")

java_library(
    name="java-maven-lib",
    srcs = glob(["src/main/java/com/windhc/s3/*.java"]),
    deps = [
        "@maven//:com_amazonaws_aws_java_sdk",
        "@maven//:com_amazonaws_aws_java_sdk_core",
        "@maven//:com_amazonaws_aws_java_sdk_s3",
        "@maven//:com_google_code_gson_gson"
    ],
)

java_binary(
    name = "s3",
    main_class = "com.windhc.s3.Main",
    runtime_deps=[":java-maven-lib"]
)
